Infinite Heaven changelog

r256 - 
fix: disableCamText - Around mode Disable mode text feedback now saves setting - thanks caplag for pointing it out.


r255 - 2021-07-09
fix: hang with Random cp subtype in addon missions.

customSoldierType: added RANDOM option
GOTCHA: if you were using customSoldierType prior to this update it will be set to the previous body type till you set it again.

Events: 
Free roam events now work for free roam addon locations
Free roam event options changed from Allow-on/off to percentage chances.

API: mission script _enemy 
Direct value to set on all, or per type table options for cpSubTypes, soldierTypes, soldierSubTypes, and cpTypes, cpAnounceLangIds
cpTypes added to set the cp voice
cpAnounceLangIds added to set the cp type in phase change announce.
soldierSubTypes can be set to true to use cpSubTypes to define soldier subtypes

API: location script weatherProbabilities, extraWeatherProbabilities

r254 - 2021-06-22
fix: hang on exit fob due to IH not handling heroicPoint as string - thanks William for your report and log.

API: mission _enemy script 
.cpTypes as either direct CpType or as table of [cpName]=CpType
.cpSubTypes as either one soldierSubType applied to all cps, or table of [cpName]=soldierSubType
.cpAnnounceLangIds - cp name langId used in TppEnemy._AnnouncePhaseChange, also see cpSubTypeToLangId
.soldierSubTypes=true (alternative to the existing [soldierSubType]={soldierName,...}), to use .cpSubTypes to define the soldierSubTypes for soldiers of the soldierDefine for those cps.

InfMainTpp.IsDDEnemy used to bypass staff died messages and hero point loss - should only catch vanilla DD enemies not addon uses of DD soldiers.

InfSoundInfo, ih/snd_ene_* fpks to load vox_ene soundbanks
fix: Some Custom soldier types having silent voices in mafr

r253 - 2021-06-15
InfFulton:
Fulton menu (in ACC)
fulton_autoFultonFREE, fulton_autoFultonMISSION - Extraction team in Free Roam/Missions